--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architects Website</title>
-    <link rel="stylesheet" href="../architects website/Styles/architects.css">
+    <link rel="stylesheet" href="Styles/architects.css">
 </head>
-<body class=".work-sans-font">
+<body class="work-sans-font">
     <header>
-        <nav>G3 Architects</nav>
+        <nav class="navbar">
+            <h3 class="brand">G3 Architects</h3>
+        </nav>
     </header>
     <Main>
 
