--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="Styles/architects.css">
 </head>
 <body class="work-sans-font">
-    <header>
-        <nav class="navbar">
+    <header class="bg-light">
+        <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flex">                                      
+                <li class="nav-items"><a href="" class="nav-links dark2">About  </a></li>
+                <li class="nav-items"><a href="" class="nav-links dark2">Contact Us</a></li>
+                <li class="nav-items"><a href="" class="nav-links dark2"> Login</a></li>
+                <li class="nav-items"><a href="" class="nav-links dark2">Home </a></li>
+            </ul>
         </nav>
     </header>
     <Main>
