--- a/index.html
+++ b/index.html
@@ -17,9 +17,29 @@
                 <li class="nav-items"><a href="" class="nav-links dark2">Home </a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects</h1>
+                <p class="banner-description dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img class="banner-image" src="images/banner.png" alt="">
+        </div>
     </header>
     <Main>
-
+        <div class="teams display-flex">
+            <div class="image-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>       
+            <div class="our-features">
+                <h3 class="feature-title"><span class="dark3">Quick list</span> <span class="dark1">of Our</span> <br> <span class="orange">Features</span></h3>
+                <p class="feature-discription dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </div>
     </Main>
     <footer>
 
