--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architects Website</title>
     <link rel="stylesheet" href="Styles/architects.css">
 </head>
+
 <body class="work-sans-font">
     <header class="bg-light">
         <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
-            <ul class="nav-links display-flex">                                      
-                <li class="nav-items"><a href="" class="nav-links dark2">About  </a></li>
+            <ul class="nav-links display-flex">
+                <li class="nav-items"><a href="" class="nav-links dark2">About </a></li>
                 <li class="nav-items"><a href="" class="nav-links dark2">Contact Us</a></li>
                 <li class="nav-items"><a href="" class="nav-links dark2"> Login</a></li>
                 <li class="nav-items"><a href="" class="nav-links dark2">Home </a></li>
@@ -20,29 +22,79 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects</h1>
-                <p class="banner-description dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="banner-description dark3">There are many variations of passages of Lorem Ipsum available, but
+                    the majority have suffered alteration in some form, by injected humour, or randomised words which
+                    don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
             <img class="banner-image" src="images/banner.png" alt="">
         </div>
     </header>
     <Main>
+        <!-- Teams Section -->
         <div class="teams display-flex">
             <div class="image-container">
                 <img src="images/team1.png" alt="">
                 <img src="images/team2.png" alt="">
                 <img src="images/team3.png" alt="">
                 <img src="images/team4.png" alt="">
-            </div>       
+            </div>
             <div class="our-features">
-                <h3 class="feature-title"><span class="dark3">Quick list</span> <span class="dark1">of Our</span> <br> <span class="orange">Features</span></h3>
-                <p class="feature-discription dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h3 class="feature-title"><span class="dark3">Quick list</span> <span class="dark1">of Our</span> <br>
+                    <span class="orange">Features</span>
+                </h3>
+                <p class="feature-discription dark3">There are many variations of passages of Lorem Ipsum available, but
+                    the majority have suffered alteration in some form, by injected humour, or randomised words which
+                    don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </div>
-    </Main>
-    <footer>
+        <!-- Features you will enjoy -->
+        <section>
 
-    </footer>
+        </section>
+        <!-- Facts Section -->
+        <section>
+            <div class="fact-section">
+                <h3 class="facts-title">Some Facts</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration.</p>
+            </div>
+            <div class="facts-container">
+                <!-- .fact*4>img.fact-icon+h4.fact-number+h3.fact-name -->
+                <div class="fact-card">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+
+        </footer>
 </body>
+
 </html>
